--- a/sat-persistence/pom.xml
+++ b/sat-persistence/pom.xml
@@ -30,7 +30,13 @@
 			<artifactId>hibernate-envers</artifactId>
 			<version>5.1.0.Final</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>1.4.196</version>
+		</dependency>
+		
 		<dependency>
 			<scope>test</scope>
 			<groupId>junit</groupId>
@@ -38,4 +44,17 @@
 			<version>4.12</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
